# dev-envs

./: README.md
argo-rollouts-with-istio/: simple-service.sh
bigdata/tpch/: generate.py
check-istio-pilot-rds-cache/: istio-minimal-operator.yaml  kind-with-istio.sh  patch-ingressgateway-nodeport.yaml
code/k8s-plain/: install-prometheus-metrics.sh  (+2 more)
envoy-test-conf/: Dockerfile  Makefile  README.md  docker-compose.yaml  envoy.yaml  envoy.yaml.new  envoy.yaml.old
keda-conf/: command.sh  create-cluster.sh
knative/: kind-with-istio.sh
kserve/: clusterconfig-1.24.1.yaml  istio-minimal-operator.yaml  kind-with-istio.sh
minio/: minio.yaml
scale-kserve-keda/: README.md  install-prometheus-metrics.sh  kind-with-istio-only-knative.sh  kind-with-istio.sh  values-latest.yaml
scale-kserve-keda/lab/: build_load_on_kind.sh  client_grpc_model.Dockerfile  linear_regression_grpc_model.Dockerfile  linear_regression_model.Dockerfile  pyproject.toml  replicas-input.json  run_linear_regression_model_call_locally.sh  run_linear_regression_model_call_remote.sh
scale-kserve-keda/lab/algo-literature/: Makefile  README.md
scale-kserve-keda/lab/algo-literature/algorithms/holt_winters/: holt_winters.py
scale-kserve-keda/lab/algo-literature/algorithms/linear_regression/: input.json  linear_regression.py
scale-kserve-keda/lab/kservelab/: grpc_client.py  linear_regression_model.py  linear_regression_model_grpc.py
tracing/: 00-kind-with-istio.sh  00-kind-with-istio12.sh  01-application.sh  02-skywalking.sh  istio-minimal-operator.yaml  skywalking.yaml  telemetry_base.yaml
(+50 files in other folders)
