[tool.poetry]
name = "kservelab"
version = "0.1.0"
description = ""
authors = ["fbalicchia <fbalicchia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
argparse-dataclass = "^0.2.1"
numpy = "^1.19"
kserve = "^0.8.0"
fastapi = "^0.85.2"
starlette = "^0.20.4"
statsmodels = "^0.13.5"
dataclasses-json= "^0.5.7"
[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
